--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,11 @@
 <resources>
     <string name="app_name">Elmyra</string>
-    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="title_activity_settings">Active Edge</string>
 
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
+    <!-- Titles -->
+    <string name="usage_header">Usage</string>
+    <string name="configuration_header">Configuration</string>
 
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
-
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <!-- Usage -->
+    <string name="action_title">Squeeze action</string>
 </resources>
